--- a/PublicCommonControls/PublicCommonControls.csproj
+++ b/PublicCommonControls/PublicCommonControls.csproj
@@ -32,19 +32,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Drawing.Design" />
-    <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Windows.Presentation" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Button\ButtonClickEventArgs.cs" />
@@ -52,7 +57,72 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Class1.cs" />
+    <Compile Include="MonthCalendar\BoldedDate.cs" />
+    <Compile Include="MonthCalendar\BoldedDateCategory.cs" />
+    <Compile Include="MonthCalendar\BoldedDateCategoryCollection.cs" />
+    <Compile Include="MonthCalendar\BoldedDatesCollection.cs" />
+    <Compile Include="MonthCalendar\CalendarDayOfWeek.cs" />
+    <Compile Include="MonthCalendar\DatePicker\DatePicker.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MonthCalendar\DatePicker\DatePickerDateTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MonthCalendar\Design\CultureInfoCustomTypeConverter.cs" />
+    <Compile Include="MonthCalendar\Design\DatePickerControlDesigner.cs" />
+    <Compile Include="MonthCalendar\Design\FlagCheckedListBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MonthCalendar\Design\FlagEnumUIEditor.cs" />
+    <Compile Include="MonthCalendar\Design\MonthCalendarCalendarTypeConverter.cs" />
+    <Compile Include="MonthCalendar\Design\MonthCalendarCalendarUIEditor.cs" />
+    <Compile Include="MonthCalendar\Design\MonthCalendarColorTableTypeConverter.cs" />
+    <Compile Include="MonthCalendar\Design\MonthCalendarControlDesigner.cs" />
+    <Compile Include="MonthCalendar\Design\MonthCalendarNamesProviderTypeConverter.cs" />
+    <Compile Include="MonthCalendar\EventClasses\ActiveDateEventArgs.cs" />
+    <Compile Include="MonthCalendar\EventClasses\CheckDateEventArgs.cs" />
+    <Compile Include="MonthCalendar\EventClasses\DateEventArgs.cs" />
+    <Compile Include="MonthCalendar\Helper\DateMethods.cs" />
+    <Compile Include="MonthCalendar\Helper\ExtensionMethods.cs" />
+    <Compile Include="MonthCalendar\Interfaces\ICustomFormatProvider.cs" />
+    <Compile Include="MonthCalendar\MonthCalendar.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MonthCalendar\MonthCalendarDate.cs" />
+    <Compile Include="MonthCalendar\MonthCalendarDay.cs" />
+    <Compile Include="MonthCalendar\MonthCalendarEraRange.cs" />
+    <Compile Include="MonthCalendar\MonthCalendarFormatProvider.cs" />
+    <Compile Include="MonthCalendar\MonthCalendarHitTest.cs" />
+    <Compile Include="MonthCalendar\MonthCalendarHitType.cs" />
+    <Compile Include="MonthCalendar\MonthCalendarMonth.cs" />
+    <Compile Include="MonthCalendar\MonthCalendarMouseMoveFlags.cs" />
+    <Compile Include="MonthCalendar\MonthCalendarSelectionMode.cs" />
+    <Compile Include="MonthCalendar\MonthCalendarWeek.cs" />
+    <Compile Include="MonthCalendar\Renderer\MonthCalendarAbstractRenderer.cs" />
+    <Compile Include="MonthCalendar\Renderer\MonthCalendarColorTable.cs" />
+    <Compile Include="MonthCalendar\Renderer\MonthCalendarHeaderState.cs" />
+    <Compile Include="MonthCalendar\Renderer\MonthCalendarRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NewIcon_Calendar_Black.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NewIcon_Calendar_Disabled.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NewIcon_Calendar_White.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
